# Image-Description-Toolkit

./: .gitignore  =1.1.3  ACCESSIBILITY_FIXES_OCT13.md  ALLCLOUDTEST_RESULTS.md  BATCH_FILES_README.md  BATCH_UI_REMOVAL_OCT14.md  BRANCH_COMPARISON_ANALYSIS.md  BRANCH_INFO.md  BUILD_AND_PACKAGE_GUIDE.md  CHANGELOG.md  CLAUDE.md  CLEANUP_COMPLETE.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  CLIPBOARD_PASTE_FEATURE.md  COMBINE_DESCRIPTIONS_README.md  COMMIT_MESSAGE.md  COPILOT_PROVIDER_CLARIFICATION.md  COPILOT_RESEARCH.md  GITHUB_ISSUE_EMPTY_RESPONSES.md  GITHUB_ISSUE_MOONDREAM_PROMPT_BULLETS.md  GITHUB_ISSUE_OLLAMA_ARCHITECTURE.md  GITHUB_ISSUE_WORKFLOW_NAMING.md  GITHUB_RELEASE_v3.0.1.md  GROUNDINGDINO_CLI_SUPPORT.md  GROUNDINGDINO_FINAL_STATUS.md  GUI_APPS_BUILD_SUMMARY.md  HOUSEKEEPING_COMPLETE.md  IDT-Development.code-workspace  IMPLEMENTATION_SUMMARY.md  INSTALLATION_SCRIPTS_ADDITION_OCT14.md  ISSUE_39_RESOLUTION.md  ISSUE_39_UPDATE.md  ISSUE_RESUME_COUNTER.md  ImageDescriptionToolkit.spec  KELLY_REFERENCES_AUDIT.md  MACOS_SETUP.md  MANIFEST.in  PACKAGING.md  QUICK_START.md  (+119 more)
.claude/: launch.json
.github/: ISSUE_AUTOMATED_TEST_SYSTEM.md  copilot-instructions.md  dependabot.yml
.idt_session/: edits_made
BatForScripts/: CLEANUP_COMPLETE.md  run_claude.bat  run_complete_workflow.bat  run_groundingdino.bat  run_groundingdino_copilot.bat  run_huggingface.bat  run_ollama.bat  run_onnx.bat  run_openai.bat  run_openai.bat.unix
BuildAndRelease/: BUILD_SYSTEM_REFERENCE.md  README.md  build-test-deploy.bat  build_idt.bat  build_installer.bat  build_output.txt  build_release.bat  builditall.bat  builditall_wx.bat  builditall_wx.command  builditall_wx.sh  check_spec_completeness.py  final_working.spec  installer.iss  package_all_windows.bat  package_idt.bat  packageitall.bat  recommended-build-test-deploy.bat  releaseitall.bat  validate_build.py
Descriptions/: moveit.bat
ImageDescriber.Full/: .gitignore  App.xaml  App.xaml.cs  Converters.cs  ImageDescriber.Full.csproj  MainViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs  Models.cs  README.md
MetaData/: binary_exif_analysis_20250919_162323.json  binary_exif_parser.py  enhanced_metadata_analysis_20250919_162139.json  enhanced_metadata_extraction.py  gps_diagnosis.py  improved_gps_location_extractor.py  install_gps_requirements.py  metadata_analysis_20250919_160932.json  raw_exif_analysis_20250919_162438.json  raw_exif_parser.py  test_metadata_extraction.py
Tests/: README.md  fix_all_bat_files.py  fix_external_bat_files.py  test_config.json  test_deployment_config.json  verify_prompt_detection.py
analysis/: CSV_FORMAT_UPGRADE.md  PROMPT_TRACKING_UPDATE.md  README.md  RESULTS_DIRECTORY_UPDATE.md  analysis_utils.py  analyze_description_content.py  analyze_workflow_stats.py  combine_workflow_descriptions.py  content_analysis.py  stats_analysis.py  workflow_statistics_1.json
bat/: INVENTORY.md  README.md  allcloudtest.bat  allmodeltest.bat  install_ollama.bat  install_vision_models.bat  remove_claude_key.bat  remove_openai_key.bat  run_all_prompts_cloudqwen.bat  run_claude_haiku3.bat  run_claude_haiku35.bat  run_claude_opus4.bat  run_claude_opus41.bat  run_claude_sonnet37.bat  run_claude_sonnet4.bat  run_claude_sonnet45.bat  run_ollama_bakllava.bat  run_ollama_cogvlm2.bat  run_ollama_gemma.bat  run_ollama_internvl.bat  run_ollama_llama32vision.bat  run_ollama_llama32vision11b.bat  run_ollama_llama32vision90b.bat  run_ollama_llava.bat  run_ollama_llava13b.bat  run_ollama_llava34b.bat  run_ollama_llava7b.bat  run_ollama_llava_llama3.bat  run_ollama_llava_phi3.bat  run_ollama_minicpmv.bat  run_ollama_minicpmv8b.bat  run_ollama_mistral31.bat  run_ollama_mistral32.bat  (+7 more)
(+999 files in other folders)
