[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "idt"
version = "4.5.0"
description = "Image Description Toolkit — AI-powered batch image description for accessibility"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0.0",
    "pillow-heif>=1.4.0",
    "piexif>=1.1.3",
    "requests>=2.25.0",
    "ollama>=0.6.2",
    "openai>=1.0.0",
    "anthropic>=0.109.2",
    "beautifulsoup4>=4.15.0",
    "opencv-python>=4.13.0.92",
    "numpy>=1.24.0",
]

[project.scripts]
idt = "cli.main:main"

[tool.setuptools.packages.find]
include = ["idt_core*", "cli*"]

[tool.pytest.ini_options]
# pytest configuration for Image Description Toolkit

# Test discovery patterns
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Test directory
testpaths = ["pytest_tests"]

# Coverage configuration
addopts = """
    -v
    --strict-markers
    --tb=short
    --cov-config=pyproject.toml
"""

# Markers for categorizing tests
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "regression: marks tests as regression tests for specific bugs"
]

[tool.coverage.run]
source = ["scripts"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/build/*",
    "*/dist/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

precision = 2
show_missing = true
